--- a/appmain/templates/update_article.html
+++ b/appmain/templates/update_article.html
@@ -1,1 +1,245 @@
-<!-- 유나님 / 지선 -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+    <title>게시물 수정</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row navbar bg-light align-items-center">
+        <div class="col-6">
+          <a class="nav-link" href="/home"><h4>MyBook</h4></a>
+        </div>
+        <div class="col-6">
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link" id="signup_link" href="/signup">SignUp</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="signin_link" href="/signin">SignIn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="signout_link" href="#">SignOut</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="myinfo_link" href="/myinfo">MyInfo</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <form>
+            <div>
+              <select class="form-select" id="prod_category">
+                <option value="0">인문</option>
+                <option value="1">사회과학</option>
+                <option value="2">자연과학</option>
+                <option value="3">의학</option>
+                <option value="4">경제/경영</option>
+                <option value="5">공학</option>
+                <option value="6">음악</option>
+                <option value="7">미술</option>
+                <option value="8">기타</option>
+              </select>
+
+              <label for="title_input" class="form-label mt-3">*제목</label>
+              <input type="text" class="form-control" id="title_input" />
+              <div class="text-danger mt-1" id="title_input_msg">&nbsp;</div>
+
+              <div
+                class="row justify-content-center mt-3"
+                id="article_image_section"
+              >
+                <div class="col-3" style="text-align: center">
+                  <figure class="figure" id="article_image_fig"></figure>
+                </div>
+              </div>
+
+              <label for="pic_input" class="form-label">사진</label>
+              <input type="file" class="form-control" id="pic_input" />
+
+              <label for="desc_input" class="form-label mt-3">설명</label>
+              <textarea
+                type="text"
+                class="form-control"
+                id="desc_input"
+                rows="4"
+              ></textarea>
+
+              <label for="price_input" class="form-label mt-3">*가격</label>
+              <input type="text" class="form-control" id="price_input" />
+              <div class="text-danger mt-1" id="price_input_msg">&nbsp;</div>
+            </div>
+
+            <div class="row justify-content-center mt-4">
+              <div class="col-4 text-center">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  id="submit_button"
+                >
+                  수정
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  id="cancel_button"
+                >
+                  취소
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      let category = document.querySelector("#prod_category");
+      let title = document.querySelector("#title_input");
+      let picture = document.querySelector("#pic_input");
+      let desc = document.querySelector("#desc_input");
+      let price = document.querySelector("#price_input");
+
+      let title_msg = document.querySelector("#title_input_msg");
+      let price_msg = document.querySelector("#price_input_msg");
+
+      function checkTitleAndPrice() {
+        let isTitleValid = title.value.length > 0 && title.value.length <= 25;
+
+        if (!isTitleValid) {
+          title_msg.innerHTML = "제목을 1~25 길이로 입력해주세요.";
+        } else {
+          title_msg.innerHTML = " ";
+        }
+
+        let isPriceValid = price.value > 0 && price.value < 100000;
+
+        if (!isPriceValid) {
+          price_msg.innerHTML = "가격을 1~100,000원 사이로 입력해주세요.";
+        } else {
+          price_msg.innerHTML = " ";
+        }
+
+        return isTitleValid && isPriceValid;
+      }
+
+      function getArticleNo() {
+        const location = window.location.href;
+        const url = new URL(location);
+        const articleNo = url.pathname.split("/")[2];
+
+        return articleNo;
+      }
+
+      function setArticleData(articleData) {
+        const categorySet = {
+          인문: 0,
+          사회과학: 1,
+          자연과학: 2,
+          의학: 3,
+          "경제/경영": 4,
+          공학: 5,
+          음악: 6,
+          미술: 7,
+          기타: 8,
+        };
+
+        const categoryCode = articleData["category"];
+        const categoryValue = categorySet[categoryCode];
+        category.options[categoryValue].selected = true;
+
+        title.value = articleData["title"];
+        desc.value = articleData["description"];
+        price.value = articleData["price"];
+
+        let image = document.createElement("img");
+        image.src = articleData["picture"];
+        image.className = "figure-img img-fluid rounded";
+        document.querySelector("#article_image_fig").appendChild(image);
+      }
+
+      function getArticleData() {
+        const articleNo = getArticleNo();
+        let formData = new FormData();
+        formData.set("articleNo", articleNo);
+
+        fetch("/api/article/display", {
+          method: "POST",
+          body: formData,
+        })
+          .then((response) => response.json())
+          .then((resBody) => setArticleData(resBody["article"]))
+          .catch((error) =>
+            console.log("[Error]UpdateArticle.getArticleData():", error)
+          );
+      }
+
+      function onChangePicFileInput() {
+        let picFile = picture.files[0];
+
+        if (picFile) {
+          let reader = new FileReader();
+
+          reader.addEventListener("load", function () {
+            document.querySelector("#article_image_fig > img").src =
+              reader.result;
+          });
+
+          reader.readAsDataURL(picFile);
+        }
+      }
+
+      picture.addEventListener("change", onChangePicFileInput);
+
+      function onSubmitHandler() {
+        let isTitleAndPriceValid = checkTitleAndPrice();
+
+        if (isTitleAndPriceValid) {
+          const articleNo = getArticleNo();
+          let formData = new FormData();
+
+          formData.set("articleNo", articleNo);
+          formData.set("category", category.value);
+          formData.set("title", title.value);
+          formData.set("picture", picture.files[0]);
+          formData.set("desc", desc.value);
+          formData.set("price", price.value);
+
+          fetch("/api/article/update", {
+            method: "POST",
+            body: formData,
+          })
+            .then((response) => response.json())
+            .then((resBody) =>
+              window.location.replace(
+                "/display_article/" + resBody["articleNo"]
+              )
+            )
+            .catch((error) =>
+              console.log("[Error]update_article.onSubmitHandler:", error)
+            );
+        }
+      }
+
+      function onCancelHandler() {
+        history.back();
+      }
+
+      document
+        .querySelector("#submit_button")
+        .addEventListener("click", onSubmitHandler);
+      document
+        .querySelector("#cancel_button")
+        .addEventListener("click", onCancelHandler);
+
+      window.addEventListener("load", getArticleData);
+    </script>
+  </body>
+</html>
