--- a/appmain/templates/signup.html
+++ b/appmain/templates/signup.html
@@ -63,7 +63,7 @@
 <script type="text/javascript" src="/static/js/navbar.js"></script>
 <script>
   // 문서의 입력 창 요소를 지정
-  const username = document.querySelector('#username_inpyt');
+  const username = document.querySelector('#username_input');
   const email = document.querySelector('#email_input');
   const passwd = document.querySelector('#password_input');
   const confirmPasswd = document.querySelector('#password_confirm');
